# vegam

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: RELEASE_PYPI.md
.github/workflows/: ci-testing.yml
scripts/: credits.sh
src/vegam/: __init__.py  __main__.py  constants.py  utils.py
src/vegam/cli/: __init__.py  base.py  cpp_commands.py  python_commands.py
src/vegam/cpp/: commands.py
src/vegam/python/: commands.py  helpers.py
src/vegam/templates/: __init__.py
src/vegam/templates/python_project/: Makefile
src/vegam/templates/python_project/.github/: PULL_REQUEST_TEMPLATE.md
src/vegam/templates/python_project/.github/workflows/: ci-testing.yml  release-pypi.yml
src/vegam/templates/python_project/scripts/: bump_version.sh  credits.sh
src/vegam/templates/python_project/tests/: __init__.py  sample_test.py
src/vegam/utils/: __init__.py  copy_template.py
tests/: __init__.py
