[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.8,<0.11" ]

[project]
name = "vegam"
version = "0.0.0"
description = "Opinionated CLI to instantly scaffold production-ready Python, C++, and multi-language projects"
readme = "README.md"
authors = [
  { name = "deependujha", email = "deependujha21@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "typer>=0.24.1",
]

scripts.vegam = "vegam:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
]
