[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.8,<0.11" ]

[project]
name = "vegam"
version = "0.0.0"

description = "Opinionated CLI to instantly scaffold production-ready Python, C++, and multi-language projects"
readme = "README.md"
authors = [
  { name = "deependujha", email = "deependujha21@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "rich>=14.3.3",
  "typer>=0.24.1",
]
scripts.vegam = "vegam.__main__:vegam_app"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.1",
  "ruff>=0.15.8",
]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--color=yes",
  "--disable-pytest-warnings",
]
filterwarnings = [ "error::FutureWarning" ]
junit_duration_report = "call"
markers = [ "cloud: Run the cloud tests for example" ]
norecursedirs = [ ".git", ".github", "dist", "build", "docs" ]
testpaths = [ "tests" ]
xfail_strict = true

[tool.mypy]
allow_redefinition = true
disable_error_code = "attr-defined"
disallow_untyped_defs = true
exclude = [
  "src/vegam/templates/",
]
files = [ "src" ]
ignore_missing_imports = true
install_types = true
non_interactive = true
show_error_codes = true
warn_no_return = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# generate with:
# mypy --no-error-summary 2>&1 | tr ':' ' ' | awk '{print $1}' | sort | uniq | sed 's/\.py//g; s|src/||g; s|\/|\.|g'
ignore_errors = true
module = [  ]
