[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.8,<0.11" ]

[project]
name = "vegam"
version = "0.0.2"

description = "Opinionated CLI to instantly scaffold production-ready Python, C++, and multi-language projects"
readme = "README.md"
authors = [
  { name = "deependujha", email = "deependujha21@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "rich>=14.3.3",
  "typer>=0.24.1",
]
scripts.vegam = "vegam.__main__:vegam_app"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.1",
  "pytest-xdist>=3.8",
  "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py39"
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  "docs",
]

format.preview = true
lint.select = [
  "E",
  "F",      # see: https://pypi.org/project/pyflakes
  "RUF018", # see: https://docs.astral.sh/ruff/rules/assignment-in-assert
  "S",      # see: https://pypi.org/project/flake8-bandit
  "UP",     # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",      # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "C4",     # see: https://pypi.org/project/flake8-comprehensions
  "I",      # see: isort
  "PT",     # see: https://pypi.org/project/flake8-pytest-style
  "RET",    # see: https://pypi.org/project/flake8-return
  "RUF100", # see: https://docs.astral.sh/ruff/rules/unused-noqa/
  "SIM",    # see: https://pypi.org/project/flake8-simplify
]
lint.ignore = [
  "E203", # conflicts with black
  "E731", # Do not assign a lambda expression, use a def
  "S108",
]
lint.per-file-ignores."examples/**" = [
  "F821", # Undefined name `...`
  "S101", # Use of `assert` detected
  "S104", # Possible binding to all interface
  "S108", # Probable insecure usage of temporary file or directory: "/tmp/data/MNIST"
  "S113", # todo: Probable use of requests call without
  "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
  "S501", # Probable use of `requests` call with `verify=False` disabling SSL certificate checks
]
lint.per-file-ignores."setup.py" = [ "S101" ]
lint.per-file-ignores."src/**" = [
  "RET503",
  "RET504", # todo:Unnecessary variable assignment before `return` statement
  "S101",   # todo: Use of `assert` detected
  "S113",   # todo: Probable use of requests call without timeout
  "S404",   # todo: `subprocess` module is possibly insecure
  "S602",   # todo: `subprocess` call with `shell=True` identified, security issue
  "S603",   # todo: `subprocess` call: check for execution of untrusted input
  "S607",   # todo: Starting a process with a partial executable path
]
lint.per-file-ignores."tests/**" = [
  "PT012", # todo: `pytest.raises()` block should contain a single simple statement
  "PT019", # todo: Fixture `_` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
  "S101",  # Use of `assert` detected
  "S108",  # todo: Probable insecure usage of temporary file or directory: "/tmp/sys-customizations-sync"
  "S311",  # todo: Standard pseudo-random generators are not suitable for cryptographic purposes
  "S403",  # `pickle`, `cPickle`, `dill`, and `shelve` modules are possibly insecure
  "S404",  # `subprocess` module is possibly insecure
  "S602",  # todo: `subprocess` call with `shell=True` identified, security issue
  "S603",  # todo: `subprocess` call: check for execution of untrusted input
  "S607",  # todo: Starting a process with a partial executable path
]
# Unlike Flake8, default to a complexity level of 10.
lint.mccabe.max-complexity = 10

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--color=yes",
  "--disable-pytest-warnings",
]
filterwarnings = [ "error::FutureWarning" ]
junit_duration_report = "call"
markers = [ "cloud: Run the cloud tests for example" ]
norecursedirs = [ ".git", ".github", "dist", "build", "docs" ]
testpaths = [ "tests" ]
xfail_strict = true

[tool.mypy]
allow_redefinition = true
disable_error_code = "attr-defined"
disallow_untyped_defs = true
exclude = [
  "src/vegam/templates/",
]
files = [ "src" ]
ignore_missing_imports = true
install_types = true
non_interactive = true
show_error_codes = true
warn_no_return = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# generate with:
# mypy --no-error-summary 2>&1 | tr ':' ' ' | awk '{print $1}' | sort | uniq | sed 's/\.py//g; s|src/||g; s|\/|\.|g'
ignore_errors = true
module = [  ]
